source/sass/header.sass
header
  background-color: rgba(255, 255, 255, 0.92)
  padding: rem-calc(20 0)
  width: 100%
  z-index: 999

  .logo
    +retina-background(logo_landscape, png, 50px, 179px)
    display: block
    height: 50px
    text-indent: rem-calc(-9999)
    width: 179px

  .menu-button
    display: none
    float: right
    line-height: 50px
    a
      color: black
    a.active
      color: $accent
    @media #{$medium-down}
      display: block

ul.site-navigation
  font-size: rem-calc(14)
  list-style: none
  margin: rem-calc(15) 0
  li
    display: inline
    margin-right: rem-calc(30)
    text-transform: uppercase
    a
      +transition(all 0.25s)
      color: $text-dark
      &.active, &:hover
        +transition(all 0.25s)
        border-bottom: solid 2px $accent
        color: $accent
        padding-bottom: rem-calc(6)
      &.button:hover
        color: $white
        padding-bottom: rem-calc(14)
  li:last-child
    margin-right: 0
  @media #{$medium-down}
    display: none
    font-size: rem-calc(18)
    margin-bottom: 0
    text-align: center
    li
      display: block
      margin-right: 0
      a
        display: block
        padding: rem-calc(5) 0
      a.active, a:hover
        border-bottom: 0
      a.button
        font-size: rem-calc(18)
        padding: rem-calc(10)
    li:last-child
      margin-top: rem-calc(10)

